Fixed scaling of disclaimer on smaller devices

--- a/style.css
+++ b/style.css
@@ -62,8 +62,9 @@ body {
 .disclosure-container {
 	position: absolute;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 	top: 0px;
 	left: 0px;
 	bottom: 0px;
@@ -86,13 +87,13 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 1.5rem;
 	justify-content: center;
+	padding: 1.5rem;
 	background-color: var(--card-colour);
 	color: var(--font-colour);
 	border-radius: 5px;
-	height: 60vh;
-	width: 80vw;
+	height: 90%;
+	width: 80%;
 	z-index: 101;
 }
 
